# Credit_scoring_project_ver_1.0

./: Dockerfile.dockerfile  README.markdown  README.md  activate_env.bat  activate_env.sh  activate_project.sh  dockerfile  dvc.yaml  fix_dependencies.py  launch.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_project.py  setup_environment.py  start_project.bat  start_project.py  start_project.sh
data/processed/: processed_data.csv  test.csv  train.csv
models/best_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
notebooks/: 01_eda.py
reports/: best_model_info.json  classification_report.json  data_info.json  drift_report_20251028_213515.json  drift_report_20251028_213726.json  drift_report_20251028_215724.json  drift_report_20251028_221229.json  drift_report_20251028_222347.json  drift_report_20251028_224739.json  drift_report_20251028_225928.json  drift_report_20251028_231328.json  drift_report_20251028_232838.json  drift_report_20251028_234754.json  drift_report_20251029_000633.json  drift_report_20251029_000706.json  drift_report_20251029_003145.json  eda_insights.txt  eda_report.json  feature_importance.json  features_info.json  run_project.py
scripts/: create_directories.py  create_feature_importance.py  create_sample_data.py  monitor_drift.py  test_training.py
src/: __init__.py
src/api/: __init__.py  app.py
src/data/: make_dataset.py  validation.py
src/features/: build_features.py
tests/: test_api.py  test_comprehensive.py  test_data_validation.py  test_features.py  test_model_pipeline.py  test_models.py  test_preprocessing.py
(+6 files in other folders)
