[project]
name = "credit-scoring-model"
version = "0.1.0"
description = "ML pipeline for credit scoring prediction"
authors = [
    {name = "ML Engineer", email = "ml-engineer@example.com"}
]
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=1.5.3",
    "numpy>=1.23.5",
    "mlflow>=2.8.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "great-expectations>=0.17.5",
    "dvc>=3.32.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pydantic>=2.4.2",
    "scipy>=1.11.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.3",
    "pylint>=2.17.4",
    "pytest-mock>=3.11.1"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", "logs", "data", "models", "reports", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing -v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"